--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
     "cross-env": "^7.0.3",
+    "form-data": "^4.0.0",
+    "got": "^11.8.1",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.2",
     "joi": "^17.4.0",
@@ -68,6 +70,9 @@
     "typescript": "^4.0.5"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
@@ -82,6 +87,11 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "node_modules",
+      ".entity.ts",
+      ".constants.ts"
+    ]
   }
 }
