--- a/package.json
+++ b/package.json
@@ -21,29 +21,31 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/gateway": "^0.24.4",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
-    "@nestjs/graphql": "^7.9.8",
+    "@nestjs/graphql": "^7.10.3",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcrypt": "^3.0.1",
     "@types/jsonwebtoken": "^8.5.0",
-    "apollo-server-express": "^2.19.2",
-    "bcrypt": "^5.0.0",
+    "apollo-server-express": "^2.23.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
     "cross-env": "^7.0.3",
     "form-data": "^4.0.0",
     "got": "^11.8.1",
     "graphql": "^15.5.0",
-    "graphql-tools": "^7.0.2",
+    "graphql-upload": "^11.0.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
+    "shortid": "^2.2.16",
     "typeorm": "^0.2.30",
     "uuid": "^8.3.2"
   },
@@ -68,6 +70,9 @@
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5"
+  },
+  "resolutions": {
+    "graphql-upload": "^9.0.0"
   },
   "jest": {
     "moduleNameMapper": {
